# vk_api-stubs

./: README.md  pyproject.toml
vk_api-stubs/: __init__.pyi  audio.pyi  audio_url_decoder.pyi  bot_longpoll.pyi  enums.pyi  exceptions.pyi  execute.pyi  keyboard.pyi  longpoll.pyi  requests_pool.pyi  streaming.pyi  tools.pyi  upload.pyi  utils.pyi  vk_api.pyi
