[tool.poetry]
name = "vk_api-stubs"
version = "0.1.0"
description = "Stubs for vk-api"
authors = ["sergey <saalaus@mail.ru>"]
packages = [{ include = "vk_api-stubs" },
            { include = "vk_api-stubs/py.typed" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
